--- a/Reports/Project_Report_8sem/Report.tex
+++ b/Reports/Project_Report_8sem/Report.tex
@@ -1215,9 +1215,9 @@ By addressing these areas, the system can evolve into a more comprehensive and u
 % \end{thebibliography}
 \printbibliography
 
-
-\includepdf[pages={1}]{DB_report_230-IEEE-Saumya.pdf}
+% \includepdf[pages=-]{GA6.pdf}
+% \includepdf[pages={1}]{DB_report_230-IEEE-Saumya.pdf}
 % \includepdf[pages=-]{DB_Summary_report_230-IEEE-Saumya.pdf}
-\includepdf[pages=-]{230-IEEE-Saumya.pdf}
+% \includepdf[pages=-]{230-IEEE-Saumya.pdf}
 
 \end{document}
